--- a/Project.toml
+++ b/Project.toml
@@ -9,3 +9,4 @@ Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
